OAK-11328: Remove usage of Guava ImmutableList (test classes) (#1922)
* OAK-11328: Remove usage of Guava ImmutableList (test classes)

* OAK-11328: Remove usage of Guava ImmutableList (test classes)