@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.security.user.query;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.api.security.JackrabbitAccessControlList;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.Group;
@@ -496,7 +495,7 @@ public class UserQueryManagerTest extends AbstractUserTest {
         };
 
         Iterator<Authorizable> result = queryMgr.findAuthorizables(q);
-        assertEquals(ImmutableList.of(user, g2, g), ImmutableList.copyOf(result));
+        assertEquals(List.of(user, g2, g), CollectionUtils.toList(result));
     }
 
     @Test
@@ -517,7 +516,7 @@ public class UserQueryManagerTest extends AbstractUserTest {
         };
 
         Iterator<Authorizable> result = queryMgr.findAuthorizables(q);
-        assertEquals(ImmutableList.of(user, g, g2), ImmutableList.copyOf(result));
+        assertEquals(List.of(user, g, g2), CollectionUtils.toList(result));
     }
 
     @Test
