@@ -27,7 +27,6 @@ import java.util.Random;
 import java.util.Set;
 import java.util.TreeSet;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableList;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 
 import org.apache.jackrabbit.api.security.principal.GroupPrincipal;
@@ -53,7 +52,7 @@ public class CompositePrincipalProviderTest {
 
     private final TestPrincipalProvider pp1 = new TestPrincipalProvider();
     private final TestPrincipalProvider pp2 = new TestPrincipalProvider("p1", "p2");
-    private final PrincipalProvider cpp = CompositePrincipalProvider.of(ImmutableList.<PrincipalProvider>of(pp1, pp2));
+    private final PrincipalProvider cpp = CompositePrincipalProvider.of(List.<PrincipalProvider>of(pp1, pp2));
 
     private Iterable<Principal> testPrincipals() {
         return Iterables.concat(pp1.getTestPrincipals(), pp2.getTestPrincipals());
@@ -65,13 +64,13 @@ public class CompositePrincipalProviderTest {
 
     @Test
     public void testOfEmptyList() {
-        assertSame(EmptyPrincipalProvider.INSTANCE, CompositePrincipalProvider.of(ImmutableList.<PrincipalProvider>of()));
+        assertSame(EmptyPrincipalProvider.INSTANCE, CompositePrincipalProvider.of(List.<PrincipalProvider>of()));
     }
 
     @Test
     public void testOfSingletonList() {
         PrincipalProvider pp = new TestPrincipalProvider(true);
-        assertSame(pp, CompositePrincipalProvider.of(ImmutableList.of(pp)));
+        assertSame(pp, CompositePrincipalProvider.of(List.of(pp)));
     }
 
     @Test
@@ -107,7 +106,7 @@ public class CompositePrincipalProviderTest {
         ItemBasedPrincipal p = mock(ItemBasedPrincipal.class);
         PrincipalProvider pp = when(mock(PrincipalProvider.class).getItemBasedPrincipal(anyString())).thenReturn(p).getMock();
 
-        assertEquals(p, CompositePrincipalProvider.of(ImmutableList.of(pp, pp2)).getItemBasedPrincipal("/any/path"));
+        assertEquals(p, CompositePrincipalProvider.of(List.of(pp, pp2)).getItemBasedPrincipal("/any/path"));
     }
 
     @Test
@@ -165,7 +164,7 @@ public class CompositePrincipalProviderTest {
      */
     @Test
     public void testRangeDefault() {
-        List<? extends Principal> pps = ImmutableList.of(new PrincipalImpl("p0"), new PrincipalImpl("p1"),
+        List<? extends Principal> pps = List.of(new PrincipalImpl("p0"), new PrincipalImpl("p1"),
                 new PrincipalImpl("p2"));
 
         PrincipalProvider pp = new PrincipalProvider() {
@@ -271,7 +270,7 @@ public class CompositePrincipalProviderTest {
         // NOTE: CompositePrincipalProvider passes 0 offset to the aggregated provider!
         when(pp.findPrincipals("p", false, PrincipalManager.SEARCH_TYPE_ALL, 0, 3)).thenReturn(principals);
 
-        PrincipalProvider cpp = CompositePrincipalProvider.of(ImmutableList.of(pp, EmptyPrincipalProvider.INSTANCE));
+        PrincipalProvider cpp = CompositePrincipalProvider.of(List.of(pp, EmptyPrincipalProvider.INSTANCE));
 
         Iterator<? extends Principal> it = cpp.findPrincipals("p", false, PrincipalManager.SEARCH_TYPE_ALL, 2, 1);
         assertTrue(it.hasNext());
